[package]
name = "session-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Critical for Wasm libraries

[dependencies]
wasm-bindgen = "0.2"
nalgebra = { version = "0.34" }
realfft = { version = "3.5", features = ["wasm_simd"] }
uuid = { version = "1.18", features = [ "v4" ] }

[dev-dependencies]
hound = "3.5"